# Nexus

./: .gitignore  db.sqlite3  generate_products.py  populate_db.py  populate_sample_data_simple.py  pyproject.toml  requirements.txt  styling.md
accounts/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  profile.html  register.html
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py
cart/templates/cart/: _cart_items.html  cart.html  cart_additions.html  navcart.html  update_response.html
ecommerce/: settings.py  urls.py
frontend/: products.py  urls.py  views.py
frontend/components/categorysection/: categorysection.html  categorysection.py
frontend/middleware/: sessions.py  threadlocals.py
frontend/static/store/: script.js
frontend/templates/: base.html  base2.html
frontend/templatetags/: custom_filters.py
inventory/: models.py
inventory/migrations/: 0001_initial.py  0002_stockalert.py
orders/: models.py  signals.py
orders/migrations/: 0001_initial.py  0002_orderstatus.py
payments/: models.py
payments/migrations/: 0001_initial.py
products/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_remove_product_is_new.py
reviews/: models.py
reviews/migrations/: 0001_initial.py  0002_reviewvote.py
store/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_review.py  0003_remove_product_image_productimage.py
(+71 files in other folders)
